<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:layout_width="340dp"
    android:layout_height="220dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="#D7FFD9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/main_horizontal_margin"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/id_number"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/name_university"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_name_university"
                android:layout_marginTop="@dimen/margin_top_name_university"
                android:lines="1"
                android:autoSizePresetSizes="@array/auto_size_text_sizes"
                android:autoSizeTextType="uniform"
                android:gravity="center_horizontal"
                android:text="@string/name_university"
                android:textAppearance="@style/name_university"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/diameter_image_university"
                    android:layout_height="@dimen/diameter_image_university"
                    android:layout_gravity="center_vertical"
                    app:cardCornerRadius="@dimen/diameter_image_university">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_university"
                        android:background="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_label_student_id"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_start_to_data"
                    android:autoSizePresetSizes="@array/auto_size_text_sizes"
                    android:autoSizeTextType="uniform"
                    android:text="@string/label_student_id"
                    android:textAppearance="@style/label_student_id"
                    android:gravity="center"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/student_id_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/student_id_number"
                    android:textAppearance="@style/student_id_number"
                    android:gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_vertical"
                    app:cardCornerRadius="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/gray" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_label"
                        android:autoSizePresetSizes="@array/auto_size_text_sizes"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:text="@string/label_last_name"
                        android:textAppearance="@style/label_data"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_data"
                        android:layout_marginStart="@dimen/margin_start_to_data"
                        android:autoSizePresetSizes="@array/auto_size_text_sizes"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:text="@string/last_name"
                        android:textAppearance="@style/data"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_label"
                        android:autoSizePresetSizes="@array/auto_size_text_sizes"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:text="@string/label_first_name"
                        android:textAppearance="@style/label_data"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_data"
                        android:layout_marginStart="@dimen/margin_start_to_data"
                        android:autoSizePresetSizes="@array/auto_size_text_sizes"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:text="@string/first_name"
                        android:textAppearance="@style/data"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_label"
                        android:autoSizePresetSizes="@array/auto_size_text_sizes"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:text="@string/label_faculty"
                        android:textAppearance="@style/label_data"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/faculty"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_data"
                        android:layout_marginStart="@dimen/margin_start_to_data"
                        android:autoSizePresetSizes="@array/auto_size_text_sizes"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:text="@string/faculty"
                        android:textAppearance="@style/data"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_label"
                        android:autoSizePresetSizes="@array/auto_size_text_sizes"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:text="@string/label_form_of_training"
                        android:textAppearance="@style/label_data"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/form_of_training"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_data"
                        android:layout_marginStart="@dimen/margin_start_to_data"
                        android:autoSizePresetSizes="@array/auto_size_text_sizes"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:text="@string/form_of_training"
                        android:textAppearance="@style/data"
                        tools:targetApi="o" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_label"
                                android:autoSizePresetSizes="@array/auto_size_text_sizes"
                                android:autoSizeTextType="uniform"
                                android:gravity="center_vertical"
                                android:text="@string/label_date_of_issue"
                                android:textAppearance="@style/label_data"
                                tools:targetApi="o" />

                            <TextView
                                android:id="@+id/date_of_issue"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_data"
                                android:autoSizePresetSizes="@array/auto_size_text_sizes"
                                android:autoSizeTextType="uniform"
                                android:gravity="center_vertical"
                                android:layout_marginStart="@dimen/margin_start_to_data"
                                android:text="@string/date_of_issue"
                                android:textAppearance="@style/data"
                                tools:targetApi="o" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/margin_start_to_data"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_label"
                                android:autoSizePresetSizes="@array/auto_size_text_sizes"
                                android:autoSizeTextType="uniform"
                                android:gravity="center_vertical"
                                android:text="@string/label_date_of_expiry"
                                android:textAppearance="@style/label_data"
                                tools:targetApi="o" />

                            <TextView
                                android:id="@+id/date_of_expiry"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_data"
                                android:layout_marginStart="@dimen/margin_start_to_data"
                                android:autoSizePresetSizes="@array/auto_size_text_sizes"
                                android:autoSizeTextType="uniform"
                                android:gravity="center_vertical"
                                android:text="@string/date_of_expiry"
                                android:textAppearance="@style/data"
                                tools:targetApi="o" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <com.example.studentidcard.custom.view.VerticalTextView
            android:id="@+id/id_number"
            android:layout_width="@dimen/main_horizontal_margin"
            android:layout_height="match_parent"
            android:fontFeatureSettings="tnum, onum"
            android:text="@string/id_number"
            android:textAppearance="@style/id_number"
            app:direction="down_to_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>